<resources>
    <!-- Asset type names -->
    <string name="brazilianStock">Ação</string>
    <string name="localDepositaryReceipts">BDR</string>
    <string name="fi">FI</string>
    <string name="etf">ETF</string>
    <string name="stock">Stock</string>

    <!-- Currency names -->
    <string name="usd">Dólar Americano</string>
    <string name="brl">Real Brasileiro</string>
    <string name="eur">Euro</string>
    <string name="cad">Dólar Canadense</string>
    <string name="inr">Rúpia Indiana</string>
    <string name="cny">Yuan Chinês</string>
    <string name="gbx">Libra Esterlina</string>

    <!-- Asset type description -->
    <string name="brazilianStockDescription">Uma ação no mercado financeiro brasileiro representa uma parcela de propriedade em uma empresa de capital aberto, negociada na bolsa de valores brasileira, a B3. Ao se tornarem acionistas, os investidores têm direito a receber dividendos e podem lucrar com a valorização das ações ao longo do tempo.</string>
    <string name="bdrDescription">BDR, ou Brazilian Depositary Receipt, é um mecanismo utilizado no mercado brasileiro que possibilita aos investidores locais adquirirem ações de empresas estrangeiras listadas em outros países, por meio da B3. Em resumo, é uma maneira de investir em empresas estrangeiras sem a necessidade de comprar diretamente as ações no mercado internacional ou lidar com questões de câmbio e regulação estrangeira.</string>
    <string name="fiDescription">FI, ou Fundo de Investimento, é uma modalidade coletiva em que o capital de vários investidores é administrado por uma instituição financeira. Essa gestora aplica os recursos de acordo com uma estratégia pré-estabelecida, visando alcançar retornos para os participantes. As cotas do fundo representam uma fração do patrimônio total e seu valor varia conforme o desempenho dos ativos.</string>
    <string name="etfDescription">Um ETF (Exchange-Traded Fund), é um tipo de investimento que combina características tanto de fundos de investimento quanto de ações. Ele é negociado na bolsa de valores, assim como uma ação. Geralmente, os ETFs são projetados para replicar o desempenho de um índice específico, como o IBOVESPA, DJIA, entre outros. Esses fundos oferecem aos investidores uma maneira eficiente de obter exposição a um mercado amplo ou a um setor específico, com custos mais baixos e maior liquidez em comparação com fundos tradicionais.</string>
    <string name="stockDescription">Uma stock, assim como as ações, representa uma parcela de propriedade em uma empresa de capital aberto, porém sendo negociada em bolsas de valores estrangeiras, como a NASDAQ, NYSE, entre outras. Ao adquirir uma stock, os investidores têm direito a receber dividendos e podem lucrar com a valorização das stocks ao longo do tempo.</string>
    <string name="otherDescription">Este tipo de ativo ainda não foi mapeado em nosso aplicativo.</string>

    <!-- Numbers -->
    <string name="intNumber_0">0</string>
    <string name="intNumber_1">1</string>

    <!-- Messages -->
    <string name="totalInvestedDescription">O total investido é utilizado para o cálculo da variação do ativo. O seu preenchimento é opcional.</string>
    <string name="unitValuePerUnitDescription">O valor por unidade é utilizado para o cálculo da variação do ativo.</string>
    <string name="fillTheFieldsToView">Preencha os campos para visualizar</string>
    <string name="noResultsFound">Nenhum resultado encontrado</string>
    <string name="enterAssetSymbolForTryAgain">Pesquise um ativo para tentar novamente.</string>
    <string name="enterSubjectForTryAgain">Pesquise um assunto para tentar novamente.</string>
    <string name="emptyAssetTittle">Comece a construir sua carteira de investimentos</string>
    <string name="emptyAssetDescription">Adicione seus ativos para ter uma visão geral da sua carteira e te ajudar a tomar melhores decisões no longo prazo.</string>
    <string name="fillAllFields">Preencha todos os campos.</string>
    <string name="registerMessage">Não tem uma conta? Cadastre-se</string>
    <string name="doLoginMessage">Já tem uma conta? Faça login</string>
    <string name="deleteAssetAlertMessage">Tem certeza de que deseja excluir este ativo da carteira?</string>
    <string name="deleteAllAssetAlertMessage">Tem certeza de que deseja excluir todos os ativo da carteira?</string>
    <string name="logoutAlertMessage">Tem certeza de que deseja sair desta conta?</string>
    <string name="deleteAccountAlertMessage">Tem certeza de que deseja excluir esta conta?</string>
    <string name="saleAssetAlertMessage">Tem certeza de que deseja vender todos os ativos?</string>
    <string name="userUpdatedSuccessfully">Usuário atualizado com sucesso!</string>
    <string name="assetUpdatedSuccessfully">Ativo atualizado com sucesso!</string>
    <string name="transactionSuccessfully">Transação realizada com sucesso!</string>
    <string name="recoveryPasswordMessage">Insira o endereço de e-mail associado a sua conta e enviaremos um link de recuperação para você criar uma nova senha!</string>
    <string name="recoveryLinkHasBeenSentMessage">O link de recuperação de senha foi enviado para o email.</string>
    <string name="confirmYourPasswordToDeleteAccount">Confirme sua senha para excluir a conta.</string>
    <string name="passwordUpdatedSuccessfully">Senha alterada com sucesso!</string>

    <!-- String arrays -->
    <string-array name="assetSortTypesArray">
        <item>Ordenar por maior valorização</item>
        <item>Ordenar por maior quantidade</item>
        <item>Ordenar por menor valorização</item>
        <item>Ordenar por menor quantidade</item>
        <item>Ordenar por símbolo</item>
    </string-array>

    <!-- Error messages -->
    <string name="assetAlreadyExists">Você já possui este ativo na carteira.</string>
    <string name="assetLoadFailed">Não foi possível carregar este ativo</string>
    <string name="noInternetConnection">Sem conexão com a internet.</string>
    <string name="checkInternetConnection">Cheque sua conexão com a internet.</string>
    <string name="somethingWentWrong">Algo deu errado, espere um pouco e tente novamente.</string>
    <string name="tooManyRequests">Conta temporariamente bloqueada. Tente novamente mais tarde.</string>
    <string name="rateLimitPerMinuteExceeded">Limite de requisições excedido, espere um pouco e tente novamente.</string>
    <string name="registerError">Erro na tentativa de Cadastro</string>
    <string name="weakPassword">Senha fraca, utilize no mínimo 6 caracteres.</string>
    <string name="loginError">Erro ao fazer Login</string>
    <string name="invalidCredentials">Credenciais inválidas, verifique o e-mail e senha.</string>
    <string name="userAlreadyExists">E-mail já utilizado por outro usuário.</string>
    <string name="userNotSignedIn">Usuário não autenticado.</string>
    <string name="userNotFound">Usuário não encontrado na base de dados.</string>
    <string name="errorOnSendRecoveryLink">Erro ao enviar o link de recuperação para o email.</string>
    <string name="errorGettingExchangeRate">Erro ao obter a cotação de Câmbio.</string>
    <string name="errorGettingAssetQuote">Erro ao obter as cotações do Ativo.</string>

    <string name="appName">Br Investidor</string>
    <string name="appNameTitle">BR Investidor</string>
    <string name="add">Add</string>
    <string name="settings">Configurações</string>
    <string name="wallet">Carteira</string>
    <string name="assetsSearch">Pesquisa de ativos</string>
    <string name="newsSearch">Pesquisa de notícias</string>
    <string name="searchYourAsset">Pesquise seu ativo…</string>
    <string name="searchASubject">Pesquise um assunto…</string>
    <string name="profile">Perfil</string>
    <string name="newAsset">Novo ativo</string>
    <string name="assetTypes">Tipos de ativos</string>
    <string name="currencies">Moedas</string>
    <string name="arrowForward">Arrow forward</string>
    <string name="Asset">Ativo</string>
    <string name="asset">ativo</string>
    <string name="Assets">Ativos</string>
    <string name="assets">ativos</string>
    <string name="addAssets">Adicionar ativos</string>
    <string name="details">Detalhes</string>
    <string name="select">Selecione</string>
    <string name="amount_form">Quantidade *</string>
    <string name="amount">Quantidade</string>
    <string name="totalInvested">Total investido</string>
    <string name="valuePerUnit">Valor por unidade</string>
    <string name="valuePerUnit_form">Valor por unidade *</string>
    <string name="currentPosition">Posição atual</string>
    <string name="save">Salvar</string>
    <string name="tryAgain">Tentar novamente</string>
    <string name="location">Localidade</string>
    <string name="information">Informação</string>
    <string name="walletValue">Valor da carteira</string>
    <string name="countries">Países</string>
    <string name="other">Outro</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="appreciation">Valorização</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="deleteAllAssets">Excluir todos os ativos</string>
    <string name="newAddition">Novo aporte</string>
    <string name="newTransaction">Nova transação</string>
    <string name="understood">Entendi</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="deleteAsset">Excluir ativo</string>
    <string name="saleAsset">Venda de ativo</string>
    <string name="updatedPosition">Posição atualizada</string>
    <string name="news">Notícias</string>
    <string name="defaultNewsSearch">bolsa de valores AND ações</string>
    <string name="sale">Venda</string>
    <string name="buy">Compra</string>
    <string name="convertValuesToLocalCurrency">Converter valores para %1$s %2$s</string>
    <string name="symbol">Símbolo</string>
    <string name="assetType">Tipo de ativo</string>
    <string name="type">Tipo</string>
    <string name="company">Empresa</string>
    <string name="currencyBuy">Moeda de compra</string>
    <string name="currentPrice">Preço atual</string>
    <string name="lastChange">Última variação</string>
    <string name="exchange">Câmbio</string>
    <string name="currentRate">Cotação atual</string>
    <string name="name">Nome</string>
    <string name="inWallet">Na carteira</string>
    <string name="changePersonalData">Alterar dados pessoais</string>
    <string name="accountConfigs">Configurações da conta</string>
    <string name="security">Segurança</string>
    <string name="logout">Sair</string>
    <string name="deleteAccount">Excluir conta</string>
    <string name="option">Opção</string>
    <string name="changePassword">Alterar senha</string>
    <string name="helloUser">Olá, %1$s</string>
    <string name="logoutAlertTitle">Sair da conta</string>
    <string name="forgotPassword">Esqueceu a senha?</string>
    <string name="sendLink">Enviar link</string>
    <string name="back">Voltar</string>
    <string name="confirmYourPassword">confirme sua senha</string>
    <string name="currentPassword">Senha atual</string>
    <string name="newPassword">Nova senha</string>
    <string name="change">Alterar</string>
    <string name="resetNewsSearch">Reiniciar pesquisa de notícias</string>

</resources>