<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/defaultPaddingTop"
    tools:context=".presenter.wallet.save_asset.SaveAssetFragment">

    <TextView
        android:id="@+id/tvTittleAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMarginStart"
        android:text="@string/asset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/select"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/tvTittleAsset"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleAsset"
        app:layout_constraintWidth_percent="0.4"
        tools:drawableTint="@color/green" />

    <TextView
        android:id="@+id/tvTittleRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/defaultMarginEnd"
        android:text="@string/asset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRegion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/select"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvTittleRegion"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleRegion"
        app:layout_constraintWidth_percent="0.4"
        tools:drawableTint="@color/green" />

    <TextView
        android:id="@+id/tvTittleQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/etSymbol"
        app:layout_constraintTop_toBottomOf="@+id/etSymbol" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/number_1"
        android:inputType="number"
        android:maxLength="9"
        android:text="@string/number_1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/etRegion"
        app:layout_constraintStart_toStartOf="@+id/tvTittleQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleQuantity" />

    <TextView
        android:id="@+id/tvTittleTotalInvested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/totalInvested"
        app:layout_constraintStart_toStartOf="@+id/etQuantity"
        app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

    <EditText
        android:id="@+id/etTotalInvested"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/etQuantity"
        app:layout_constraintStart_toStartOf="@+id/tvTittleTotalInvested"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleTotalInvested"
        tools:hint="R$ 100,00" />

    <TextView
        android:id="@+id/tvTittleCurrentPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/currentPosition"
        app:layout_constraintEnd_toEndOf="@+id/etTotalInvested"
        app:layout_constraintStart_toStartOf="@+id/etTotalInvested"
        app:layout_constraintTop_toBottomOf="@+id/etTotalInvested" />

    <include
        android:id="@+id/incCurrentPosition"
        layout="@layout/item_list_asset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTittleCurrentPosition"
        app:layout_constraintStart_toStartOf="@+id/tvTittleCurrentPosition"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleCurrentPosition" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="@dimen/defaultButtonHeight"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/incCurrentPosition"
        app:layout_constraintStart_toStartOf="@+id/incCurrentPosition"
        app:layout_constraintTop_toBottomOf="@+id/incCurrentPosition" />

</androidx.constraintlayout.widget.ConstraintLayout>