<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/defaultSpace">

        <TextView
            android:id="@+id/tvAccountConfigs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountConfigs"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/incChangePersonalData"
            layout="@layout/item_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountConfigs" />

        <include
            android:id="@+id/incDeleteAccount"
            layout="@layout/item_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incChangePersonalData" />

        <TextView
            android:id="@+id/tvSecurityConfigs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/security"
            app:layout_constraintTop_toBottomOf="@+id/incDeleteAccount" />

        <include
            android:id="@+id/incChangePassword"
            layout="@layout/item_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSecurityConfigs" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/logout"
            android:textColor="@color/defaultButtonBackgroundColor"
            android:textSize="@dimen/textSize4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incChangePassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>