<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/defaultSpace">

            <TextView
                android:id="@+id/tvBuy"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_green_stroke"
                android:gravity="center"
                android:text="@string/buy"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvSale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSale"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rectangle_gray_stroke"
                android:gravity="center"
                android:text="@string/sale"
                android:textColor="@color/appTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/tvBuy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvBuy"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTittleQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/amount_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBuy" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="@dimen/defaultRadius"
                app:boxCornerRadiusBottomStart="@dimen/defaultRadius"
                app:boxCornerRadiusTopEnd="@dimen/defaultRadius"
                app:boxCornerRadiusTopStart="@dimen/defaultRadius"
                app:boxStrokeColor="@color/green"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleQuantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intNumber_0"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTittleUnitValuePerUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultSpace"
                android:text="@string/valuePerUnit_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAmount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutValuePerUnit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="@dimen/defaultRadius"
                app:boxCornerRadiusBottomStart="@dimen/defaultRadius"
                app:boxCornerRadiusTopEnd="@dimen/defaultRadius"
                app:boxCornerRadiusTopStart="@dimen/defaultRadius"
                app:boxStrokeColor="@color/green"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleUnitValuePerUnit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietValuePerUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:hint="R$ 0,00" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTittleCurrentPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultSpace"
                android:text="@string/currentPosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutValuePerUnit" />

            <include
                android:id="@+id/incCurrentPosition"
                layout="@layout/item_asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleCurrentPosition" />

            <TextView
                android:id="@+id/tvTittleUpdatedPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultSpace"
                android:text="@string/updatedPosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/incCurrentPosition" />

            <include
                android:id="@+id/incNewPosition"
                layout="@layout/item_asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleUpdatedPosition" />

            <include
                android:id="@+id/incBtnSave"
                layout="@layout/button_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/incNewPosition" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/incProgressBar"
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>